--- a/src/app/hello/hello.component.html
+++ b/src/app/hello/hello.component.html
@@ -1,1 +1,3 @@
-<h1 >id helloworld : {{ hello.id }}</h1>
+<h1>Test</h1>
+<h1>{{ hello.id }}</h1>
+<qrcode [qrdata]="qrdata" [size]="256" [level]="'M'"></qrcode>
