--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
     <a class="button" routerLink="/hello" routerLinkActive="activebutton">Hello World !</a>
+    <a class="button" routerLink="/connexion" routerLinkActive="activebutton">Connexion!</a>
 </nav>
 <router-outlet></router-outlet>
 
