--- a/src/app/components/connexion/connexion.component.css
+++ b/src/app/components/connexion/connexion.component.css
@@ -53,6 +53,7 @@ html {
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
+    padding-top: 10px;
   }
   
   #formFooter {
@@ -125,7 +126,7 @@ html {
     display: inline-block;
     font-size: 16px;
     margin: 5px;
-    width: 85%;
+    width: 80%;
     border: 2px solid #f6f6f6;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
