--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -5,19 +5,19 @@
   
       <!-- Icon -->
       <div class="fadeIn first">
-        <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+        <img style="width: 75px;height: auto;" src="../../assets/images/connexionImage.jpg" id="icon" alt="User Icon" />
       </div>
   
       <!-- Login Form -->
       <form>
         <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+        <input type="text" id="password" class="fadeIn third" name="login" placeholder="mot de passe">
         <input type="submit" class="fadeIn fourth" value="Log In">
       </form>
   
       <!-- Remind Passowrd -->
       <div id="formFooter">
-        <a class="underlineHover" href="#">Forgot Password?</a>
+        <a class="underlineHover" href="#">Pas de compte? Inscrivez-vous</a>
       </div>
   
     </div>
