--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <nav>
     <a class="button" routerLink="/hello" routerLinkActive="activebutton">Hello World !</a>
     <a class="button" routerLink="/connexion" routerLinkActive="activebutton">Connexion!</a>
+    <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription!</a>
+
 </nav>
 <router-outlet></router-outlet>
 
