bugfix button login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
     <a class="button" routerLink="/hello" routerLinkActive="activebutton">Hello World !</a>
-    <a class="button" routerLink="/connexion" routerLinkActive="activebutton">Connexion!</a>
+    <a class="button" routerLink="/login" routerLinkActive="activebutton">Connexion!</a>
     <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription!</a>
 
 </nav>
