--- a/src/app/components/inscription/inscription.component.html
+++ b/src/app/components/inscription/inscription.component.html
@@ -33,7 +33,7 @@
         <input class="form-control" placeholder="Confirmer le mot de passe" type="password">
     </div> <!-- form-group// -->                                      
     <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-block">Créer un compte</button>
+        <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
     </div> <!-- form-group// -->      
     <p class="text-center">Vous avez déjà un compte? <a href="">Connectez-vous</a> </p>                                                                 
 </form>
