--- a/src/app/components/inscription/inscription.component.html
+++ b/src/app/components/inscription/inscription.component.html
@@ -3,11 +3,17 @@
 	<h4 class="card-title mt-3 text-center">Créer un compte</h4>
 	<p class="text-center">Vous allez bientôt pouvoir utiliser cette superbe application...</p>
 	<form>
+    <div class="form-group input-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+         </div>
+        <input name="" class="form-control" placeholder="Login" type="text">
+    </div> <!-- form-group// -->
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Nom/Etablissement" type="text">
+        <input name="" class="form-control" placeholder="Nom ou Etablissement" type="text">
     </div> <!-- form-group// -->
 
     <div class="form-group input-group">
