liens des boutons fonctionnent

--- a/src/app/components/inscription/inscription.component.html
+++ b/src/app/components/inscription/inscription.component.html
@@ -41,7 +41,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Vous avez déjà un compte? <a href="">Connectez-vous</a> </p>                                                                 
+    <p class="text-center">Vous avez déjà un compte? <a routerLink="/login">Connectez-vous</a> </p>                                                                 
 </form>
 </article>
 </div> <!-- card.// -->
