--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
     
     <!-- Remind Passowrd -->
     <div id="formFooter">
-      <a class="underlineHover" href="#">Pas de compte? Inscrivez-vous</a>
+      <a class="underlineHover" routerLink="/inscription">Pas de compte? Inscrivez-vous</a>
     </div>
 
   </div>
