--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="form-group">
-        <input type="text" id="password" class="fadeIn third" formControlName="password" placeholder="Mot de passe" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+        <input type="password" id="password" class="fadeIn third" formControlName="password" placeholder="Mot de passe" [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">Password is required</div>
         </div>
