INSCRIPTION QUI FONCTIONNE <3

--- a/src/app/components/inscription/inscription.component.html
+++ b/src/app/components/inscription/inscription.component.html
@@ -2,35 +2,41 @@
 <article class="card-body mx-auto" style="max-width: 400px;">
 	<h4 class="card-title mt-3 text-center">Créer un compte</h4>
 	<p class="text-center">Vous allez bientôt pouvoir utiliser cette superbe application...</p>
-	<form>
+	<form [formGroup]="inscriptionForm" (ngSubmit)="onSubmit()">
     <div class="form-group input-group">
         <div class="input-group-prepend">
             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
          </div>
-        <input name="" class="form-control" placeholder="Login" type="text">
+        <input name="" class="form-control" formControlName="login" placeholder="Login" type="text">
     </div> <!-- form-group// -->
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Nom ou Etablissement" type="text">
+        <input name="" class="form-control" formControlName="name" placeholder="Nom ou Etablissement" type="text">
     </div> <!-- form-group// -->
 
     <div class="form-group input-group">
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-building"></i> </span>
 		</div>
-		<select class="form-control">
+		<select class="form-control" formControlName="role">
 			<option selected="">Selectionnez votre type de compte :</option>
 			<option>Médecin</option>
 			<option>Etablissement</option>
 		</select>
 	</div> <!-- form-group end.// -->
+	<div class="form-group input-group">
+		<div class="input-group-prepend">
+		    <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+		 </div>
+        <input name="adresse" class="form-control" formControlName="adress" placeholder="Adresse (dans le cas d'un etablissement)" type="text">
+    </div> <!-- form-group// -->
     <div class="form-group input-group">
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
 		</div>
-        <input class="form-control" placeholder="Mot de passe" type="password">
+        <input class="form-control" placeholder="Mot de passe" formControlName="password" type="password">
     </div> <!-- form-group// -->
     <div class="form-group input-group">
     	<div class="input-group-prepend">
