connexion to med work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
     <a class="button" routerLink="/login" routerLinkActive="activebutton">Connexion!</a>
     <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription!</a>
+    <a class="button" routerLink="/doctor" routerLinkActive="activebutton">Médecin</a>
 
 </nav>
 <router-outlet></router-outlet>
