--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
           <input  type="submit" class="fadeIn fourth" value="Se connecter" />
-          <div *ngIf="submitted && !connected">Pseudo ou mot de passe incorrecte</div>
+          <div *ngIf="submitted && f.username.errors == null && f.password.errors == null && !connected">Pseudo ou mot de passe incorrecte</div>
         </div>
       </div>
     </form>
