Quelques modifs + ajout establishment component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <h1>{{title}}</h1>
 <nav>
-    <a class="button" routerLink="/login" routerLinkActive="activebutton">Connexion!</a>
-    <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription!</a>
+    <a class="button" routerLink="/login" routerLinkActive="activebutton">Connexion</a>
+    <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription</a>
     <a class="button" routerLink="/doctor" routerLinkActive="activebutton">Médecin</a>
+    <a class="button" routerLink="/establishment" routerLinkActive="activebutton">Etablissement</a>
 
 </nav>
 <router-outlet></router-outlet>
