--- a/src/app/components/establishment/establishment.component.html
+++ b/src/app/components/establishment/establishment.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button type="button" class="btn btn-secondary">
+    <button type="button" class="btn btn-secondary"(click)="showPlace()">
         Liste des lieux
         <span class="popuptext" id="listPopup"></span>
     </button>
