--- a/src/app/components/establishment/establishment.component.html
+++ b/src/app/components/establishment/establishment.component.html
@@ -5,6 +5,8 @@
     </button>
 
     <a class="btn btn-secondary" routerLink="/add-place">Ajouter un lieu</a>
+    
+    <input #input type="text">
 
 </div>
 
