--- a/src/app/components/establishment/establishment.component.html
+++ b/src/app/components/establishment/establishment.component.html
@@ -4,7 +4,7 @@
         <span class="popuptext" id="listPopup"></span>
     </button>
 
-    <a class="btn btn-secondary" routerLink="/add-place">Ajouter un lieu</a>
+    <a class="btn btn-secondary" routerLink="/ajout-lieu">Ajouter un lieu</a>
     
     <input #input type="text">
 
