--- a/src/app/components/inscription/inscription.component.html
+++ b/src/app/components/inscription/inscription.component.html
@@ -22,9 +22,9 @@
 					<span class="input-group-text"> <i class="fa fa-building"></i> </span>
 				</div>
 				<select class="form-control" formControlName="role">
-					<option selected="">Selectionnez votre type de compte :</option>
-					<option>Médecin</option>
-					<option>Etablissement</option>
+					<option value = "" selected>Selectionnez votre type de compte</option>
+					<option value="Médecin">Médecin</option>
+					<option value="Etablissement">Etablissement</option>
 				</select>
 			</div> <!-- form-group end.// -->
 			<div class="form-group input-group">
