--- a/src/app/components/establishment/establishment.component.html
+++ b/src/app/components/establishment/establishment.component.html
@@ -8,8 +8,19 @@
         </div>    
     </div>
     <br />
-
-   <table class="table"></table>
+   <table class="table table-striped">
+       <tr>
+           <th>Id lieu</th>
+           <th>Nom</th>
+           <th>Description</th>
+       </tr>
+       <tr *ngFor="let place of places">
+            <th>{{place.place_id}}</th>
+            <th>{{place.name}}</th>
+            <th>{{place.description}}</th>
+            <th (click)="genereateQrCode(place.place_id, place.name, place.description)"></th>
+       </tr>
+   </table>
     
 </div>
 
