--- a/src/app/components/establishment/add-place/add-place.component.css
+++ b/src/app/components/establishment/add-place/add-place.component.css
@@ -10,7 +10,7 @@ body {
 }
 
 a {
-  color: #92badd;
+  color: #C26764;
   display: inline-block;
   text-decoration: none;
   font-weight: 400;
@@ -76,7 +76,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset] {
-  background-color: #56baed;
+  background-color: #C2666E;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -98,7 +98,7 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-  background-color: #39ace7;
+  background-color: #D6666E;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
@@ -153,7 +153,7 @@ input[type=password] {
 
 input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #C26764;
 }
 
 input[type=text]:placeholder {
@@ -273,7 +273,7 @@ input[type=text]:placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #C26764;
   content: "";
   transition: width 0.2s;
 }
@@ -294,8 +294,4 @@ input[type=text]:placeholder {
 
 #icon {
   width: 60%;
-}
-
-.qrcode {
-  padding-bottom: 25px;
 }
