--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,18 @@
-/* Application-wide Styles */
+.my-container {
+  background-color: #F8F9FA;
+  width: 100vw;
+  height: 100%;
+}
+
+footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 
 h1 {
-  color: #369;
+  color: #C2666E;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
@@ -28,37 +39,27 @@ body, input[type="text"], button {
 }
 
 .button {
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-  background-color: #ffffff;
-  border-radius: 6px;
-  border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
-  color: #666666;
-  font-family: Arial;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 6px 24px;
+  background-color: #C2666E;
+  border: none;
+  color: white;
+  padding: 15px 80px;
+  text-align: center;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #ffffff;
-  outline: 0;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 13px;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  margin: 5px 20px 40px 20px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .activebutton {
-  box-shadow: inset 0px 1px 0px 0px #dcecfb;
-  background: linear-gradient(to bottom, #bddbfa 5%, #80b5ea 100%);
-  background-color: #bddbfa;
-  border-radius: 6px;
-  border: 1px solid #84bbf3;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 6px 24px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #528ecc;
-  outline: 0;
+  background-color: #D6666E;
 }
