--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
         <h1 style="display: inline;">{{title}}</h1>
     </div>
     <nav>
-        <a class="button" routerLink="/login" routerLinkActive="activebutton">Connexion</a>
-        <a class="button" routerLink="/inscription" routerLinkActive="activebutton">Inscription</a>
-        <a class="button" routerLink="/doctor" routerLinkActive="activebutton">Médecin</a>
-        <a class="button" routerLink="/establishment" routerLinkActive="activebutton">Etablissement</a>
+        <a class="coronabtn" routerLink="/login" routerLinkActive="activebutton">Connexion</a>
+        <a class="coronabtn" routerLink="/inscription" routerLinkActive="activebutton">Inscription</a>
+        <a class="coronabtn" routerLink="/doctor" routerLinkActive="activebutton">Médecin</a>
+        <a class="coronabtn" routerLink="/establishment" routerLinkActive="activebutton">Etablissement</a>
 
     </nav>
     <router-outlet></router-outlet>
