--- a/src/app/components/establishment/establishment.component.html
+++ b/src/app/components/establishment/establishment.component.html
@@ -1,10 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3">
-            <button class="btn btn-primary" (click)="showPlace()">Afficher les lieux</button>
-        </div>
-        <div class="col-md-3">
-            <button class="btn btn-primary" routerLink="/ajout-lieu">Ajouter un lieu</button>
+            <button class="coronabtn" routerLink="/ajout-lieu">Ajouter un lieu</button>
         </div>
     </div>
     <br />
