--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,13 @@
-<p>page-not-found works!</p>
+<div class="card text-center">
+    <div class="card-header">
+      Oups
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Impossible d'accéder à cette page.</h5>
+      <p class="card-text">C'est peut-être car vous n'y êtes pas autorisé, ou que vous êtes déconnecté.</p>
+      <a routerLink="/login" class="coronabtn">Se connecter</a>
+    </div>
+    <div class="card-footer text-muted">
+      BlockCovid
+    </div>
+</div>
