Connexion et inscription done ajout page d'accueil

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,33 @@
 <div class="my-container">
     <div>
-        <img src="./assets/images/shield-virus.png">
-        <h1 style="display: inline;">{{title}}</h1>
+        <div style="display: inline-block;">
+            <a routerLink="">
+                <img src="./assets/images/shield-virus.png">
+                <h1 style="display: inline;">{{title}}</h1>
+            </a>
+        </div>
+        <div *ngIf="username != null" style="display: inline-block;">
+            {{username}}
+        </div>
     </div>
+
+
     <nav>
-        <a class="coronabtn" routerLink="/login" routerLinkActive="activebutton">Connexion</a>
-        <a class="coronabtn" routerLink="/inscription" routerLinkActive="activebutton">Inscription</a>
-        <a class="coronabtn" routerLink="/doctor" routerLinkActive="activebutton">Médecin</a>
-        <a class="coronabtn" routerLink="/establishment" routerLinkActive="activebutton">Etablissement</a>
-        <a  *ngIf="connected==true" id="deco" (click)="deconnexion()" class="coronabtn" routerLink="/establishment" routerLinkActive="activebutton">Déconnexion</a>
+        <a *ngIf=(!connected) class="coronabtn" routerLink="/login" routerLinkActive="activebutton">Connexion</a>
+        <a *ngIf=(!connected) class="coronabtn" routerLink="/inscription"
+            routerLinkActive="activebutton">Inscription</a>
+        <a *ngIf="connected && is_doctor" class="coronabtn" routerLink="/doctor"
+            routerLinkActive="activebutton">Médecin</a>
+        <a *ngIf="connected && !is_doctor" class="coronabtn" routerLink="/establishment"
+            routerLinkActive="activebutton">Etablissement</a>
+        <a *ngIf=(connected) id="deco" (click)="deconnexion()" class="coronabtn" routerLink="/establishment"
+            routerLinkActive="activebutton">Déconnexion</a>
 
     </nav>
     <router-outlet></router-outlet>
-    
 
-<footer class="card-footer">
-    <small class="text-muted"><i class="far fa-copyright"></i>Groupe 2 - IPL </small>
-</footer>
+
+    <footer class="card-footer">
+        <small class="text-muted"><i class="far fa-copyright"></i>Groupe 2 - IPL </small>
+    </footer>
 </div>
